--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
                 </svg>
             </button>
         </div>
+
+        <div class="flex justify-center">
+            <button class="group p-5 border-2 border-[#000000] hover:border-gray-700 rounded-full transition-colors duration-700 transform">
+                <!-- Icon -->
+                <svg class="w-16 stroke-[2] transition-colors duration-700 transform stroke-[#000000] group-hover:stroke-gray-700" fill="none" stroke="currentColor" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 2 C12 2 12 6 12 6 L12 16 C12 16 12 20 16 20 20 20 20 16 20 16 L20 6 C20 6 20 2 16 2 Z M8 17 C8 17 8 24 16 24 24 24 24 17 24 17 M13 29 L19 29 M16 24 L16 29" stroke-linecap="round"/>
+                </svg>
+            </button>
+        </div>
+
+        <div class="flex justify-center">
+            <button class="group p-5 border-2 bg-gray-700 border-gray-700 rounded-full transition-colors duration-700 transform outline-none ring ring-gray-500">
+                <!-- Icon -->
+                <svg class="w-16 stroke-[2] transition-colors duration-700 transform stroke-[#FFFFFF]" fill="none" stroke="currentColor" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 2 C12 2 12 6 12 6 L12 16 C12 16 12 20 16 20 20 20 20 16 20 16 L20 6 C20 6 20 2 16 2 Z M8 17 C8 17 8 24 16 24 24 24 24 17 24 17 M13 29 L19 29 M16 24 L16 29" stroke-linecap="round"/>
+                </svg>
+            </button>
+        </div>
     </div>
     <!-- Form End -->
 
